--- a/assets/styles/settings/_config.template.scss
+++ b/assets/styles/settings/_config.template.scss
@@ -4,14 +4,14 @@
 // =============================================================================
 $white: #fff;
 $black: #000;
+$purple: rgb(162, 147, 248);
 
 // Selection
 $selection-text-color: $white;
-$selection-background-color: $black;
+$selection-background-color: $purple;
 
 // Typography
 // =============================================================================
 $font-size: 16px;
 $line-height: 24px / $font-size;
 $body-font-family: 'Josefin Sans', sans-serif;
-$color: #fff;
